<resources>
    <string name="app_name">PemuCoffee</string>

    <string name="recipes">Recipes</string>
    <string name="brewing">Brewing</string>
    <string name="find_shop">Find shop</string>

    <string name="action_add_recipe">Add recipe</string>

    <string name="ingredients">Ingredients</string>
    <string name="methods">Methods</string>
    <string name="add_new_recipe">Add new coffee recipe</string>
    <string name="share_recipe">Share recipe</string>
    <string name="loading">Loading</string>
    <string name="no_internet_available">No internet connection available</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="a11y_recipe_image">Recipe image</string>
    <string name="a11y_brew_method_image">Brew method image</string>
    <string name="a11y_reorder_icon">Reorder icon</string>
    <string name="a11y_close_icon">Close icon</string>

    <string name="hint_name">Name</string>
    <string name="hint_add_item">Add item</string>
    <string name="hint_add_ingredient">Add ingredient</string>
    <string name="hint_add_method">Add method</string>

    <string name="error_no_recipe_name">Please enter a valid recipe name</string>
    <string name="dialog_no_internet_message">The device has no internet connection available. Check your internet connection settings</string>
    <string name="dialog_button_internet_configuration">Go to configuration</string>
    <string name="dialog_button_cancel">Cancel</string>

</resources>
