<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_widget"
    android:padding="@dimen/activity_margin_side">

    <ImageView
        android:id="@+id/widget_image_recipe"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/a11y_recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_default" />

    <TextView
        android:id="@+id/widget_recipe_name"
        style="@style/TextAppearance.MaterialComponents.Overline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/widget_image_recipe"
        android:layout_toLeftOf="@id/widget_image_recipe"
        android:textSize="12sp"
        tools:text="Recipe name" />

    <TextView
        android:id="@+id/widget_recipe_ingredient_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textSize="12sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_recipe_name"
        android:text="@string/ingredients" />

    <TextView
        android:id="@+id/widget_recipe_ingredient_list"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_recipe_ingredient_title"
        tools:text=" • Ingredient 1 \n • Ingredient 2 \n • Ingredient 3 \n " />

    <TextView
        android:id="@+id/widget_recipe_method_title"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_recipe_ingredient_list"
        android:text="@string/methods" />

    <TextView
        android:id="@+id/widget_recipe_method_list"
        android:textSize="12sp"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_recipe_method_title"
        tools:text=" • Method 1 \n • Method 2 \n • Method 3 \n " />

</RelativeLayout>