<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.BrewMethodDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout_brew_method"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_brew_method"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/collapsing_toolbar_layout_margin_title_end"
            app:expandedTitleMarginStart="@dimen/collapsing_toolbar_layout_margin_title_start"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/app_name">

            <ImageView
                android:id="@+id/toolbar_image_brew_method"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/a11y_brew_method_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/coffee_default"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_gradient" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_brew_method"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_brew_method_method_title"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_title_margin_start"
                android:layout_marginLeft="@dimen/text_title_margin_start"
                android:layout_marginTop="@dimen/text_title_margin_top"
                android:text="@string/methods"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_brew_method_method_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_body_margin_start"
                android:layout_marginLeft="@dimen/text_body_margin_start"
                android:layout_marginEnd="@dimen/text_body_margin_end"
                android:layout_marginRight="@dimen/text_body_margin_end"
                app:layout_constraintStart_toStartOf="@id/tv_brew_method_method_title"
                app:layout_constraintTop_toBottomOf="@id/tv_brew_method_method_title"
                tools:text="1-. Step 1 \n2-. Step 2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>